clean up of no-where background

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1 class="image-testing-header">Image Testing, Yoh</h1>
     </div>
 
-    <section class="color-invert background fixed x-center y-center no-where">
+    <section>
         <h1>Patrick Flanagan</h1>
         <h2>Sr. User Interface Application Developer, Strategic Technology Solutions (STS) at HealthGrades</h2>
         <h3>What should I be conveying to future employer’s? </h3>
