moving img background stuff around

--- a/index.html
+++ b/index.html
@@ -14,15 +14,7 @@
 </head>
 <body>
 
-    <div class="background-image size-cover x-center y-top fixed bokeh">
-        <h1 class="image-testing-header">Image Testing, Yoh</h1>
-    </div>
-
-    <div class="background-image size-cover x-center y-top banner-one">
-        <h1 class="image-testing-header">Image Testing, Yoh</h1>
-    </div>
-
-    <section>
+    <section class="background-image size-cover x-center y-top fixed bokeh">
         <h1>Patrick Flanagan</h1>
         <h2>Sr. User Interface Application Developer, Strategic Technology Solutions (STS) at HealthGrades</h2>
         <h3>What should I be conveying to future employer’s? </h3>
@@ -35,7 +27,7 @@
             <li>Examples</li>
         </ul>
     </section>
-    <section>
+    <section class="color-invert background-image size-cover x-center y-top fixed banner-one">
         <h3>Objective</h3>
         <p>To continue growing as a front-end professional at company where creativity and innovation are encouraged.</p>
     </section>
