--- a/index.html
+++ b/index.html
@@ -14,29 +14,20 @@
 </head>
 <body>
 
-    <section class="background-image size-cover x-center y-top fixed bokeh">
-        <h1>Patrick Flanagan</h1>
-        <h2>Sr. User Interface Application Developer, Strategic Technology Solutions (STS) at HealthGrades</h2>
-        <h3>What should I be conveying to future employer’s? </h3>
-        <ul>
-            <li>Objectives</li>
-            <li>Branding Statement</li>
-            <li>Skills and talents</li>
-            <li>Expectations from both myself and employer</li>
-            <li>Q&amp;A</li>
-            <li>Examples</li>
-        </ul>
+    <section class="background-image size-cover x-center y-top fixed aurora-borealis">
+        <h1 class="color-invert margin-md-bottom">Patrick Flanagan</h1>
+        <h5 class="color-invert">Sr. User Interface Application Developer, Strategic Technology Solutions (STS) at HealthGrades</h5>
     </section>
     <section class="color-invert background-image size-cover x-center y-top fixed banner-one">
-        <h3>Objective</h3>
+        <h3 class="margin-md-bottom">Objective</h3>
         <p>To continue growing as a front-end professional at company where creativity and innovation are encouraged.</p>
     </section>
     <section>
-        <h3>Branding Statement</h3>
+        <h3 class="margin-md-bottom">Branding Statement</h3>
         <p>A professional front-end UI developer with a persuasive and energetic personality, capacity and interest to continue learning. A team player who loves to grow artistically and has created award-winning designs which have brought world-wide recognition from peers.</p>
     </section>
     <section>
-        <h3>Skills</h3>
+        <h3 class="margin-md-bottom">Skills</h3>
         <h4>Programming Languages/Patterns:</h4>
         <ul>
             <li>Advanced - xHTML, .LESS, .SCSS</li>
@@ -51,7 +42,7 @@
         </ul>
     </section>
     <section>
-        <h3>Work History</h3>
+        <h3 class="margin-md-bottom">Work History</h3>
         <h4>Healthgrades</h4>
         <p>
             Title: Sr. User Interface Application Developer, Strategic Technology Solutions (STS)<br />
