--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-    <section class="background-image size-cover x-center y-top fixed aurora-borealis">
+    <section class="vh100 background-image size-cover x-center y-top fixed aurora-borealis">
         <h1 class="color-invert margin-md-bottom">Patrick Flanagan</h1>
         <h5 class="color-invert">Sr. User Interface Application Developer, Strategic Technology Solutions (STS) at HealthGrades</h5>
     </section>
@@ -67,7 +67,7 @@
 
     <script type="text/javascript">
         WebFontConfig = {
-            google: { families: ['Old+Standard+TT::latin', 'Ubuntu:400,700:latin'] }
+            google: { families: ['Droid+Sans::latin'] }
         };
         (function () {
             var wf = document.createElement('script');
