--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta name="description" content="" />
     <meta charset="utf-8" />
-    <meta name="author" content="//samdutton.com">
+    <meta name="author" content="//update.me">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
     <meta name="mobile-web-app-capable" content="yes">
-    <meta id="theme-color" name="theme-color" content="#307699">
     <base target="_blank">
     <title>Patrick Flanagan - Front-end UI Developer</title>
     <link rel="stylesheet" href="css/main.min.css" />
