--- a/index.html
+++ b/index.html
@@ -13,19 +13,18 @@
 </head>
 <body>
     <div class="off-canvas">
-        <a href="" class="off-canvas-trigger">
-            =
-        </a>
         <nav class="site-nav">
-            <ul class="clear-styles">
-                <li><a href="" class="btn link-resume">Resume</a></li>
-                <li><a href="" class="btn link-prototypes">Prototypes</a></li>
-            </ul>
+            <a href="" class="btn link-resume">Resume</a>
+            <a href="" class="btn link-prototypes">Prototypes</a>
         </nav>
         <main>
-            <section class="vh100 background-image size-cover x-center y-top fixed aurora-borealis">
+            <section class="background-image size-cover x-center y-center fixed aurora-borealis">
                 <h1 class="color-invert margin-md-bottom">Patrick Flanagan</h1>
                 <h5 class="color-invert">Sr. User Interface Application Developer, Strategic Technology Solutions (STS) at HealthGrades</h5>
+            </section>
+            <section>
+                <h3 class="margin-md-bottom">Responsive Carousel</h3>
+                <a href="_responsive-carousel.html" class="btn">view demo</a>
             </section>
             <section class="color-invert background-image size-cover x-center y-top fixed banner-one">
                 <h3 class="margin-md-bottom">Objective</h3>
@@ -74,6 +73,12 @@
                 </p>
             </section>
         </main>
+        <header class="site-header">
+            <a href="" class="off-canvas-trigger">
+                =
+            </a>
+            <span class="header-logo"><strong>Patrick</strong> Flanagan</span>
+        </header>
     </div>
     
 
