--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
             <a href="" class="btn link-prototypes">Prototypes</a>
         </nav>
         <main>
-            <section class="background-image size-cover x-center y-center fixed aurora-borealis">
-                <h1 class="color-invert margin-md-bottom">Patrick Flanagan</h1>
-                <h5 class="color-invert">Sr. User Interface Application Developer, Strategic Technology Solutions (STS) at HealthGrades</h5>
+            <section class="vh75 background-image size-cover x-center y-top fixed aurora-borealis">
+                <div class="hero middle">
+                    <h1 class="color-invert margin-xsm-bottom">Patrick Flanagan</h1>
+                    <h5 class="color-invert margin-no">Sr. User Interface Application Developer, Strategic Technology Solutions (STS) at HealthGrades</h5>
+                </div>
             </section>
             <section>
                 <h3 class="margin-md-bottom">Responsive Carousel</h3>
@@ -75,7 +77,7 @@
         </main>
         <header class="site-header">
             <a href="" class="off-canvas-trigger">
-                =
+                <i class="fa fa-bars"></i>
             </a>
             <span class="header-logo"><strong>Patrick</strong> Flanagan</span>
         </header>
