--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
     <div class="off-canvas">
         <nav class="site-nav">
-            <a href="" class="btn link-resume">Resume</a>
-            <a href="" class="btn link-prototypes">Prototypes</a>
+            <a href="#" class="btn link-resume">Resume</a>
+            <a href="#pf-prototypes" class="btn link-prototypes">Prototypes</a>
         </nav>
         <main>
             <section class="vh75 background-image size-cover x-center y-top fixed aurora-borealis">
@@ -30,7 +30,7 @@
                     <p class="color-invert margin-no">Sr. User Interface Application Developer, Strategic Technology Solutions (STS) at HealthGrades</p>
                 </div>
             </section>
-            <section>
+            <section id="pf-prototypes">
                 <h3 class="margin-md-bottom">Responsive Carousel</h3>
                 <a href="_responsive-carousel.html" class="btn">view demo</a>
             </section>
@@ -110,14 +110,56 @@
                 //bar(foo.toAlert);
             }
 
-            $('.time').addClass('slide-down');
+            //$('html, body').animate({
+            //    scrollTop: $("#elementtoScrollToID").offset().top + offset
+            //}, 2000);
 
-            $('.off-canvas-trigger').on('click', function (event) {
-                event.preventDefault();
+            //var $siteNav = $('.site-nav'),
+            //    $offCanvasTrigger = $('.off-canvas-trigger');
+
+            _pf.vars = {
+                $siteNav: $('.site-nav'),
+                $offCanvasTrigger: $('.off-canvas-trigger')
+            };
+
+
+            // site-nav
+            _pf.vars.$siteNav.on('click', 'a', function (event) {
+                event.preventDefault(event),
+
                 $that = $(this);
-                $that.closest('.off-canvas').toggleClass('open');
+
+                _pf.sectionScroll($that);
+                _pf.offCanvasToggle($that);
+                _pf.linkText($that);
             });
 
+            _pf.sectionScroll = function($that) {
+                if ($that) {
+                    console.log($that.attr('href'));
+                }
+            }
+
+            _pf.linkText = function($that) {
+                if ($that) {
+                    console.log($that.text());
+                }
+            }
+
+            _pf.offCanvasToggle = function ($that) {
+                if ($that) {
+                    $that.closest('.off-canvas').toggleClass('open');
+                }
+            }
+            
+            // off canvas
+            _pf.vars.$offCanvasTrigger.on('click', function (event) {
+                event.preventDefault(),
+                $that = $(this);
+                _pf.offCanvasToggle($that);
+            });
+            
+            // google fonts
             var wf = document.createElement('script');
             wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
               '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
