--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
             </section>
             <section id="pf-prototypes">
                 <h3 class="margin-md-bottom">Responsive Carousel</h3>
-                <a href="_responsive-carousel.html" class="btn">view demo</a>
+                <a href="_responsive-carousel.html" class="btn margin-lg-bottom">view demo</a>
+                <h3 class="margin-md-bottom">Off Canvas</h3>
+                <a href="_off-canvas.html" class="btn">view demo</a>
             </section>
             <section id="pf-resume" class="color-invert background-image size-cover x-center y-top fixed banner-one">
                 <h3 class="margin-md-bottom">Objective</h3>
